--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "element-plus": "^2.6.3",
     "jquery": "^3.7.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
